# architect-rust-example

./: Cargo.toml
env/docker/architect/: config.yml  limits.json
env/docker/netidx/: client.json
src/: main.rs
